[workspace]
members = ["contracts/*", "packages/*"]

[profile.release.package.mars-core]
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
rpath = false
lto = true
overflow-checks = true
debug-assertions = false
debug = false
panic = "abort"
strip = true


[workspace.dependencies]
cosmwasm-std = "0.16.2"
cosmwasm-schema = "0.16.2"

cw2 = "0.9.0"
cw20 = "0.9.0"
cw20-base = { version = "0.9.0", features = ["library"] }
cw0 = "0.9.0"
cw-storage-plus = "0.9.0"
