[workspace]
members = ["contracts/*", "packages/*"]

[profile.release.package.mars-core]
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
rpath = false
lto = true
overflow-checks = true
debug-assertions = false
debug = false
panic = "abort"
strip = true


[workspace.dependencies]
cosmwasm-std = "1.1.2"
cosmwasm-schema = "1.1.2"
cw2 = "0.15.0"
cw20 = "0.15.0"
cw20-base = { version = "0.15.0", features = ["library"] }
cw0 = "0.10.3"
cw-storage-plus = "0.15.0"

terraswap = "2.8.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"
