[package]
name = "address-provider"
version = "0.1.0"
authors = ["Spike Spiegel <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars = { path = "../../packages/mars", version = "0.1.0" }
cw20 = "0.6"

terra-cosmwasm = "=2.0.0"
terraswap = "=2.2.0"

cosmwasm-std = "0.14.1"
cosmwasm-storage = "0.14.1"
cosmwasm-bignumber = "=2.0.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6.3"
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.1" }
