[package]
name = "ma-token"
version = "0.2.0"
authors = ["Spike Spiegel  <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars = { path = "../../packages/mars", version = "0.1.0" }

cw0 = "0.7" 
cw2 = "0.7" 
cw20 = "0.7" 
cw20-base = { version = "0.7", features = ["library"] }

cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
cw-storage-plus = { version = "0.7.0", features = ["iterator"] }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6.3"
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0" }
cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
