[package]
name = "ma-token"
version = "0.2.0"
authors = ["Spike Spiegel  <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars = { path = "../../packages/mars", version = "0.1.0" }
red-bank = { path = "../../contracts/red-bank", version = "0.1.0", features = ["library"] }

cw0 = "0.8"
cw2 = "0.8"
cw20 = "0.8"
cw20-base = { version = "0.8", features = ["library"] }

cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
