cargo-features = ["workspace-inheritance"]
[package]
name = "mars-ma-token"
version = "1.0.0"
authors = ["Spike Spiegel  <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars-core = { path = "../../packages/mars-core", version = "1.0.0" }

cw0 = { worksapce = true}
cw2 = { workspace = true }
cw20= { workspace = true }
cw20-base = { worksapce = true, features = ["library"] }
cw-storage-plus = { worksapce = true}

cosmwasm-std = { workspace = true }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
cosmwasm-schema = { workspace = true }

[profile.release]
overflow-checks = true
