[package]
name = "mars-oracle"
version = "1.0.2"
authors = [
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "larry_0x <larry@delphidigital.io>"
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-core = { path = "../../packages/mars-core", version = "1.0.2" }

cw-storage-plus = { worksapce = true}

cosmwasm-std = { workspace = true }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

thiserror = "1.0.23"

terraswap = {workspace = true}

[dev-dependencies]
cosmwasm-schema = { workspace = true }

[profile.release]
overflow-checks = true
