[package]
name = "oracle"
version = "0.1.0"
authors = [
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "larry_0x <larry@delphidigital.io>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars = { path = "../../packages/mars", version = "0.1.0" }
cosmwasm-std = "0.16.0"
cw20 = "0.8"
cw-storage-plus = "0.8.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terra-cosmwasm = "2.2.0"
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = "0.16.0"