[package]
name = "staking"
version = "0.1.0"
authors = ["Spike Spiegel <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars = { path = "../../packages/mars", version = "0.1.0" }
cw20 = "0.7"
cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
cw-storage-plus = { version = "0.7.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6.3"
terra-cosmwasm = "2.1.0"
terraswap = "2.3.0"
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = "0.15.0"
cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
